# ARIAC-2017-Competition-Solution

./: CMakeLists.txt  README.md  gear.world.template  package.xml  solution.sublime-workspace  solution2.sublime-workspace
config/: gear_configuration.yaml  test_config.yaml
include/: advanced_publisher.h  competition_interface.h  controller.h  object_manager.h  parts_grasp_loc.h  planner.h  search_manager.h  utility.h
launch/: qual2.launch
src/: solution_node.cpp
