<?xml version="1.0"?>
<package format="2">
  <name>competition_solution</name>
  <version>2.0.0</version>
  <description>competition solution package</description>
  <maintainer email="bucklemp@usc.edu.org">Matt Buckley</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>osrf_gear</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  <depend>keyboard</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>

</package>